Cadastro de Revistas

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ArthesDbConn": "server=DESKTOP-ENIQEP3\\SQLEXPRESS;database=ArthesDb;Trusted_connection=true"
+    "ArthesDbConn": "Data Source=DESKTOP-ENIQEP3\\SQLEXPRESS;Initial Catalog=ArthesDb;Integrated Security=True"
   }
 }
