--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ArthesDbConn": "Data Source=DESKTOP-ENIQEP3\\SQLEXPRESS;Initial Catalog=ArthesDb;Integrated Security=True"
+    //"ArthesDbConn": "Data Source=DESKTOP-ENIQEP3\\SQLEXPRESS;Initial Catalog=ArthesDb;Integrated Security=True",
+    "ArthesDbConn": "Data Source=JBG-LENOVOGMING\\SQLEXPRESS;Initial Catalog=ArthesDb;Integrated Security=True"
   }
 }
